--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -104,7 +104,7 @@ admin_39 : "» ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_40 : "ᴜᴘᴠᴏᴛᴇᴅ."
 
 start_1 : "❍ • {0} ɪs ᴀʟɪᴠᴇ ʙᴀʙʏ •\n\n<b>❍ ᴜᴘᴛɪᴍᴇ :</b> {1}"
-start_2 : "**╭───────────────────▣**\n**│❍ ʜᴇʏ {0} •**\n**│❍ ɪ ᴀᴍ {1} •**\n**├───────────────────▣**\n**│❍ ʙᴇsᴛ ǫᴜɪʟɪᴛʏ ғᴇᴀᴛᴜʀᴇs •**\n**│❍ ᴍᴀᴅᴇ ʙʏ...[˹ 𝗜𝗻𝗰𝗿𝗶𝗰𝗶𝗯𝗹𝗲𝘁𝗲𝗮𝗺˼](https://t.me/THE_INCRICIBLE) •**\n**╰───────────────────▣**"
+start_2 : "<blockquote>❖ ᴛʜɪs ɪs {1} 🎶 ! </blockquote>\n\n<blockquote>━━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━━\n❖ ᴛʜɪs ɪs ϻɪɴɪ | ϻυsɪᴄ ʙσᴛ\n❖ ησ ʟᴧɢ | ᴧᴅs ϻυsɪᴄ | ησ ᴘʀσϻσ\n❖ 24x7 ʀυη | ʙєsᴛ sσυηᴅ ǫυᴧʟɪᴛʏ\n━━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━━\n❖ ᴄʟɪᴄᴋ ση ᴛʜє ʜєʟᴩ ʙυᴛᴛση ᴛσ ɢєᴛ ɪηғσ\n    ᴧʙσυᴛ ϻʏ ϻσᴅυʟєs ᴧηᴅ ᴄσϻϻᴧηᴅs...!\n━━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━ ━━</blockquote>"
 start_3 : "𝐇ᴇʏ {0},\n𝐓ʜɪs ɪs {1}\n\n𝐓ʜᴀɴᴋs 𝐅ᴏʀ 𝐀ᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} 𝐂ᴀɴ ɴᴏᴡ 𝐏ʟᴀʏ 𝐒ᴏɴɢs ɪɴ 𝐓ʜɪs ᴄʜᴀᴛ."
 start_4 : "❍ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ ɴᴇᴇᴅᴇᴅ</b> ❍\n\nᴘʟᴇᴀsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏᴜʀ <b>ɢʀᴏᴜᴘ</b> ᴛᴏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ</b> ᴀɴᴅ ᴛʜᴇɴ ᴀᴅᴅ ᴍᴇ ᴀɢᴀɪɴ.\n\n<b>ʜᴏᴡ ᴛᴏ ᴍᴀᴋᴇ sᴜᴘᴇʀɢʀᴏᴜᴘ ?</b>\n- ᴍᴀᴋᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ's ᴄʜᴀᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
 start_5 : "<b>↝ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴀᴛ ɪs ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴀᴛᴀʙᴀsᴇ.\nʀᴇǫᴜᴇsᴛ ᴀ <a href={1}>sᴜᴅᴏ ᴜsᴇʀ</a> ᴛᴏ ᴜɴʙʟᴀᴄᴋʟɪsᴛ ʏᴏᴜʀ ᴄʜᴀᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ.</a>"
@@ -193,8 +193,8 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>𝐑=ᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "❍ <b>sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ •</b>\n\n<b>❍ ʟʏʀɪᴄ •</b> <a href={0}>{1}</a>\n<b>❍ ᴛɪᴍᴇ •</b> {2} ᴍɪɴᴜᴛᴇs\n<b>❍ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ •</b> {3}\n\n**❍ᴘᴏᴡᴇʀᴇᴅ ʙʏ➛[ɪɴᴄʀɪᴄɪʙʟᴇ-ᴍᴜsɪᴄ ™](https://t.me/THE_INCRICIBLE)"
-stream_2 : "❍ <b>sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ •</b>\n\n<b>❍ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ •</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>❍ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ •</b> {0}\n\n**❍ᴘᴏᴡᴇʀᴇᴅ ʙʏ ➛[ɪɴᴄʀɪᴄɪʙʟᴇ-ᴍᴜsɪᴄ ™](https://t.me/THE_INCRICIBLE)**"
+stream_1 : "<blockquote>❍ <b>𝗧-𝗦𝗲𝗿𝗶𝗲𝘀 𝗢𝗻 𝗦𝘁𝗿𝗲𝗮𝗺𝗶𝗻𝗴</b></blockquote>\n\n<b><blockquote>❍ ʟʏʀɪᴄ •</b> <a href={0}>{1}</a>\n<b>❍ ᴛɪᴍᴇ •</b> {2} ᴍɪɴᴜᴛᴇs\n<b>❍ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ •</b> {3}</blockquote>\n\n**<blockquote>❖ ᴘᴏᴡᴇʀᴇᴅ  ➥[ᴛ-sᴇʀɪᴇs™](https://t.me/Tseries_update)</blockquote>"
+stream_2 : "<blockquote>❍ <b>𝗧-𝗦𝗲𝗿𝗶𝗲𝘀 𝗢𝗻 𝗦𝘁𝗿𝗲𝗮𝗺𝗶𝗻𝗴</b></blockquote>\n\n<b><blockquote>❍ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ •</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>❍ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ •</b> {0</blockquote>}\n\n</blockquote>**❖ ᴘᴏᴡᴇʀᴇᴅ  ➥[ᴛ-sᴇʀɪᴇs™](https://t.me/Tseries_update)**</blockquote>"
 
 
 
@@ -207,14 +207,14 @@ S_B_2 : "• sᴜᴘᴘᴏꝛᴛ •"
 S_B_3 : "• ᴛᴧᴘ тᴏ sᴇᴇ ᴍᴧɢɪᴄ •"
 S_B_4 : "˹ ʜᴇʟᴘ ᴧиᴅ ᴄᴏᴍᴍᴧɴᴅs ˼"
 S_B_5 : "• ᴧᴅᴅ мᴇ ʙᴧʙʏ •"
-S_B_6 : "• ᴍᴏʀᴇ •"
+S_B_6 : "𝗠𝗢𝗥𝗘"
 S_B_7 : "• sᴏᴜꝛᴄᴇ •"
 S_B_8 : "• ʏᴏᴜ-ᴛᴜʙᴇ •"
 S_B_9 : "• sᴜᴘᴘᴏꝛᴛ •"
-S_B_10 : "❖ ᴛᴧᴘ тᴏ sᴇᴇ ᴍᴧɢɪᴄ ❖"
+S_B_10 : "𝗣𝗹𝗮𝘆 𝗧-𝗦𝗲𝗿𝗶𝗲𝘀 𝗜𝗻 𝗚𝗿𝗼𝘂𝗽"
 S_B_11 : "˹ ❍ᴡɴᴇꝛ ˼"
-S_B_13 : "˹ ᴍᴏᴅᴇ ˼"
-S_B_12 : "˹ ᴧʙᴏᴜᴛ ˼"
+S_B_13 : "˹ 𝗠𝗼𝗱𝗲 ˼"
+S_B_12 : "˹ 𝗔𝗕𝗢𝗨𝗧 ˼"
 
 
 #Playlist
